# BrewStillery-5.20

./: .gitignore  ABV_Brix_Guestimator.rb  BrewStillery.glade  BrewStillery.glade~  BrewStillery.rb  Brix_To_Final_ABV.rb  Cargo.toml  README.md  TODO  guestimateABV.rb  increaseABV.rb  realABV.rb  waterSparge.rb
Arch/: BrewStillery.desktop  PKGBUILD
scripts/: install.sh  uninstall.sh
src/: BrewStillery.glade~  main.rs
src/functions/: champagneCarbonation.rs  commonFunctions.rs  grainToABV.rs  guestimateABV.rs  guestimateIBU.rs  gyleCarbonation.rs  increaseABV.rs  mod.rs  realABV.rs  waterSparge.rs
src/gui/: BrewStillery.css  BrewStillery.glade  BrewStillery.glade~  mod.rs
src/light/: lightFunctions.rs  mod.rs
src/light/colour/: computedIlluminantData.rs  illuminantAData.rs  illuminantCData.rs  mod.rs  s0Data.rs  s1Data.rs  s2Data.rs  x10Data.rs  x2Data.rs  y10Data.rs  y2Data.rs  z10Data.rs  z2Data.rs
src/light/eigenVectors/: averageData.rs  mod.rs  v0Data.rs  v10Data.rs  v11Data.rs  v12Data.rs  v13Data.rs  v14Data.rs  v15Data.rs  v16Data.rs  v17Data.rs  v18Data.rs  v19Data.rs  v1Data.rs  v20Data.rs  v21Data.rs  v2Data.rs  v3Data.rs  v4Data.rs  v5Data.rs  v6Data.rs  v7Data.rs  v8Data.rs  v9Data.rs
src/light/exampleAbsorption/: budweiserData.rs  cooprSparklData.rs  domMilnmData.rs  guinnessData.rs  lindemansKriekData.rs  mackesonsTripleStoutData.rs  mod.rs  negroModeloData.rs  pils123Data.rs  stout122Data.rs  tsingtaoData.rs
src/light/main/: mod.rs  reconstructedTransmissionData.rs
