[package]
name = "BrewStillery"
version = "2.0.0"
authors = ["Emily And Meade <thedarkula2049@gmail.com>"]
description = "BrewStillery is a brewer's, vintner's, and distiller's calculator. It has a multitude of great functions, such as calculating ABV, determining carbonation, and total sparge water needed."
# documentation to come
# documentation = "..."
homepage = "https://monkeylog.in"
repository = "https://github.com/MonkeyLog/BrewStillery"
readme = "README.md"
keywords = ["beer", "wine", "champagne", "distilling", "calculator"]
categories = ["science", "gui"]
license = "AGPL-3.0"
exclude = ["media/screenshots/*", "Arch/*"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]

[dependencies.gtk]
version = "0.2.0"
features = ["v3_22"]

[profile.dev]
codegen-units = 4

[profile.release]
opt-level = 3
codegen-units = 4
lto = true